# parallel-closest-pair

./: .gitignore  README.md  flake.nix  openvsx.nix
.github/workflows/: benchmark.yaml  ci_cd.yaml
.github/workflows/setup_vpn/: action.yml
Report/: conference_101719.aux  conference_101719.fdb_latexmk  conference_101719.fls  conference_101719.tex  introduction.tex  parallelization.tex  problem_analysis.tex
data/: 100K.txt  5k.txt  8.txt  test_dataset.txt
data/dataset_generator/: generate_dataset.py
dataset_generator/: generate_dataset.py
experiments/1M_points/: times.md
parallel/: divide_et_impera.c  main  main.c  parallel.sh
parallel/outputs/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
scripts/: entrypoint.sh  notify_on_telegram.sh  test.sh
scripts/CI/: benchmark.sh  entrypoint.sh
serial/: divide_et_impera.c  main  main.c  naive.c  points_loader.c  utils.h
src/: main.c  serial.c
src/algorithms/: divide_et_impera.c  divide_legacy.c  naive.c
src/parallel/: divide_et_impera.c  main.c
src/parallel/utils/: args_parsing.c  args_parsing.h  finalize.c  mpi.h  output.h  points.h  points_loader.c  print_help.c
src/serial/: divide_2.c  divide_et_impera.c  divide_legacy.c  main.c  naive.c
src/utils/: args_parsing.h  finalize.h  output.h  points_loader.h  utils.h
test/: CMakeLists.txt  first_test.cpp
test/serial/: correct_result_test.cpp
utils/: points_loader.c  utils.h
